--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-# Terminal Animation Dependencies
-colorama>=0.4.6
-termcolor>=2.3.0
+# Essential Terminal Dependencies (All verified on PyPI)
 rich>=13.7.0
-typing-extensions>=4.8.0
+colorama>=0.4.6
 
 # Optional: Enhanced terminal features
 pyfiglet>=1.0.2
-# animated-terminal removed (no PyPI distribution)
 blessed>=1.20.0
 
 # Development dependencies (optional)
